# mnist

./: README.md
aige_mnist/: CMakeLists.txt  mnist-infer.cpp  utils.cpp
aige_mnist/include/: model.h  type.h  wrapper.h
aige_mnist/model/: mnist.pth
train-mnist/: CMakeLists.txt  README.md  train.cpp
train-mnist/checkpoint/: checkpoint.pth
train-mnist/include/: model.h  utils.h
train-mnist/src/: detect.cpp  train.cpp  utils.cpp
